2001-04-27  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/doxygen/mainpage.doxy: New.
	* docs/doxygen/user.cfg.in: Change default configuration. Single
	frame, other tweaks.

2001-04-26  Mark Mitchell  <mark@codesourcery.com>

	* docs/html/17_intro/BADNAMES: Remove EGCS reference.
	Indicate obsolete nature of thelist for G++ 3.0.

2001-04-26  Alexandre Oliva  <aoliva@redhat.com>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Obtain
	target_thread_file with `gcc -v'.
	* aclocal.m4, configure: Rebuilt.

2001-04-25  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c_std/bits/std_cmath.h (std): Explicitly inject c99 names.
	* include/c_std/bits/std_cstdlib.h (std): Same, except for llabs.
	* include/c_std/bits/std_cwchar.h (std): Same.
	* acconfig.h (std): Remove c99 injection into std.
	* config.h.in: Regenerate.
	
	* testsuite/README: Fix typo.

	* include/bits/codecvt.h: Remove warnings.
	
2001-04-24  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

        * include/ext/slist: Include required header files. 

2001-04-23  Loren J. Rittle  <ljrittle@acm.org>

	* include/c_std/bits/std_cerrno.h (errno): Define macro from
	identifier declared with external linkage, if needed.
	* include/c_std/bits/std_csetjmp.h (setjmp): Likewise.
	* include/c_std/bits/std_cstdarg.h (va_end): Likewise.

2001-04-23  Benjamin Kosnik  <bkoz@fillmore.constant.com>

	* acinclude.m4 (CXX): Set to glibcpp_CXX so that in-directory
	re-configures find the build compiler.
	(GLIBCPP_ENABLE_C99): Do all fp-tests with 0.0, not 0. Fixes
	libstdc++/2609.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-04-20  Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude.m4 (GLIBCPP_ENABLE_LONG_LONG): Make sure required C99
	support is enabled correctly before long long is activated.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	
	* include/backward/backward_warning.h: Format correctly.

	* testsuite/26_numerics/c99_classification_macros_c.cc: Add.