@@ -5,7 +5,7 @@
 # Synopsis:  run_doxygen --mode=[user|maint]  v3srcdir  v3builddir
 #
 # Originally hacked together by Phil Edwards <pme@sources.redhat.com>
-# $Id: run_doxygen,v 1.2 2001/03/25 02:28:07 pme Exp $
+# $Id: run_doxygen,v 1.3 2001/04/05 21:09:24 pme Exp $
 
 
 # We can check now that the version of doxygen is = this variable.  We need
@@ -70,7 +70,7 @@ parse_options() {
         blank=
         Id=is
         echo You expect this dinky script to track a version?  Okay, here
-        echo it $Id: run_doxygen,v 1.2 2001/03/25 02:28:07 pme Exp $blank
+        echo it $Id: run_doxygen,v 1.3 2001/04/05 21:09:24 pme Exp $blank
         exit 0
         ;;
       *)
@@ -110,14 +110,13 @@ case x"$mode" in
       exit 1 ;;
 esac
 
-# test for doxygen version here?
-
 test -d $outdir || (mkdir -p $outdir ; chmod u+w $outdir)
 (
   set -e
   cd $srcdir
-  sed -e "s=@outdir@=${outdir}=" docs/doxygen/${mode}.cfg.in \
-      > ${outdir}/${mode}.cfg
+  sed -e "s=@outdir@=${outdir}=" \
+      -e "s=@srcdir@=${srcdir}=" \
+      docs/doxygen/${mode}.cfg.in > ${outdir}/${mode}.cfg
   echo $doxygen ${outdir}/${mode}.cfg
   $doxygen ${outdir}/${mode}.cfg
 )
