@@ -1,4 +1,4 @@
-# Doxyfile 1.2.4
+# Doxyfile 1.2.6
 
 # This file describes the settings to be used by doxygen for a project
 #
@@ -9,6 +9,10 @@
 #       TAG += value [value, ...]
 # Values that contain spaces should be placed between quotes (" ")
 
+### When doxygen is run, the current directory is the top of
+### the libstdc++-v3 source directory.  Keep this in mind while
+### writing relative-path directories.
+
 #---------------------------------------------------------------------------
 # General configuration options
 #---------------------------------------------------------------------------
@@ -16,7 +20,7 @@
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded 
 # by quotes) that should identify the project. 
 
-PROJECT_NAME           = "libstdc++-v3"
+PROJECT_NAME           = libstdc++-v3
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. 
 # This could be handy for archiving the generated documentation or 
@@ -79,14 +83,14 @@ HIDE_UNDOC_CLASSES     = YES
 # the file and class documentation (similar to JavaDoc). 
 # Set to NO to disable this. 
 
-BRIEF_MEMBER_DESC      = NO
+BRIEF_MEMBER_DESC      = YES
 
 # If the REPEAT_BRIEF tag is set to YES (the default) Doxygen will prepend 
 # the brief description of a member or function before the detailed description. 
 # Note: if both HIDE_UNDOC_MEMBERS and BRIEF_MEMBER_DESC are set to NO, the 
 # brief descriptions will be completely suppressed. 
 
-REPEAT_BRIEF           = NO
+REPEAT_BRIEF           = YES
 
 # If the ALWAYS_DETAILED_SEC and REPEAT_BRIEF tags are both set to YES then 
 # Doxygen will generate a detailed section even if there is only a brief 
@@ -217,6 +221,12 @@ GENERATE_TODOLIST      = NO
 
 GENERATE_TESTLIST      = NO
 
+# The GENERATE_BUGLIST tag can be used to enable (YES) or 
+# disable (NO) the bug list. This list is created by putting \bug 
+# commands in the documentation.
+
+GENERATE_BUGLIST       = YES
+
 # This tag can be used to specify a number of aliases that acts 
 # as commands in the documentation. An alias has the form "name=value". 
 # For example adding "sideeffect=\par Side Effects:\n" will allow you to 
@@ -224,7 +234,30 @@ GENERATE_TESTLIST      = NO
 # will result in a user defined paragraph with heading "Side Effects:". 
 # You can put \n's in the value part of an alias to insert newlines. 
 
-#ALIASES                = 
+ALIASES                = 
+
+# The MAX_INITIALIZER_LINES tag determines the maximum number of lines 
+# the initial value of a variable or define consist of for it to appear in 
+# the documentation. If the initializer consists of more lines than specified 
+# here it will be hidden. Use a value of 0 to hide initializers completely. 
+# The appearance of the initializer of individual variables and defines in the 
+# documentation can be controlled using \showinitializer or \hideinitializer 
+# command in the documentation regardless of this setting. 
+
+MAX_INITIALIZER_LINES  = 30
+
+# Set the OPTIMIZE_OUTPUT_FOR_C tag to YES if your project consists of C sources
+# only. Doxygen will then generate output that is more tailored for C. 
+# For instance some of the names that are used will be different. The list 
+# of all members will be omitted, etc. 
+
+OPTIMIZE_OUTPUT_FOR_C  = NO
+
+# Set the SHOW_USED_FILES tag to NO to disable the list of files generated 
+# at the bottom of the documentation of classes and structs. If set to YES the 
+# list will mention the files that were used to generate the documentation. 
+
+SHOW_USED_FILES        = YES
 
 #---------------------------------------------------------------------------
 # configuration options related to warning and progress messages
@@ -239,7 +272,6 @@ QUIET                  = YES
 # generated by doxygen. Possible values are YES and NO. If left blank 
 # NO is used. 
 
-### pme  Turned off; apparently doxygen can't grok templates
 WARNINGS               = NO
 
 # If WARN_IF_UNDOCUMENTED is set to YES, then doxygen will generate warnings 
@@ -259,25 +291,32 @@ WARN_FORMAT            = "$file:$line: $text"
 # and error messages should be written. If left blank the output is written 
 # to stderr. 
 
-#WARN_LOGFILE           = 
+WARN_LOGFILE           = 
 
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 
-# The INPUT tag can be used to specify the files and/or directories that contain 
+# The INPUT tag can be used to specify the files and/or directories that contain
 # documented source files. You may enter file names like "myfile.cpp" or 
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces. 
 
-INPUT                  = docs/doxygen libsupc++ include src
+INPUT                  = docs/doxygen \
+                         libsupc++ \
+                         include \
+                         src
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
 # and *.h) to filter out the source-files in the directories. If left 
 # blank all files are included. 
 
-FILE_PATTERNS          = *.doxy *.cc *.tcc *.h c++config
+FILE_PATTERNS          = *.doxy \
+                         *.cc \
+                         *.tcc \
+                         *.h \
+                         c++config
 
 # The RECURSIVE tag can be used to turn specify whether or not subdirectories 
 # should be searched for input files as well. Possible values are YES and NO. 
@@ -288,7 +327,9 @@ RECURSIVE              = YES
 # The EXCLUDE tag can be used to specify files and/or directories that should 
 # excluded from the INPUT source files. This way you can easily exclude a 
 # subdirectory from a directory tree whose root is specified with the INPUT tag. 
-EXCLUDE                = include/c include/c_shadow
+
+EXCLUDE                = include/c \
+                         include/c_shadow
 
 # If the value of the INPUT tag contains directories, you can use the 
 # EXCLUDE_PATTERNS tag to specify one or more wildcard patterns to exclude 
@@ -328,7 +369,7 @@ INPUT_FILTER           =
 # INPUT_FILTER) will be used to filter the input files when producing source 
 # files to browse. 
 
-#FILTER_SOURCE_FILES    = NO
+FILTER_SOURCE_FILES    = NO
 
 #---------------------------------------------------------------------------
 # configuration options related to the alphabetical class index
@@ -385,7 +426,7 @@ HTML_FOOTER            =
 # fine-tune the look of the HTML output. If the tag is left blank doxygen 
 # will generate a default style sheet 
 
-HTML_STYLESHEET        = 
+HTML_STYLESHEET        = docs/doxygen/style.css
 
 # If the HTML_ALIGN_MEMBERS tag is set to YES, the members of classes, 
 # files or namespaces will be aligned in HTML using tables. If set to 
@@ -400,6 +441,23 @@ HTML_ALIGN_MEMBERS     = YES
 
 GENERATE_HTMLHELP      = NO
 
+# If the GENERATE_HTMLHELP tag is set to YES, the GENERATE_CHI flag 
+# controls if a separate .chi index file is generated (YES) or that 
+# it should be included in the master .chm file (NO).
+
+GENERATE_CHI           = NO
+
+# If the GENERATE_HTMLHELP tag is set to YES, the BINARY_TOC flag 
+# controls whether a binary table of contents is generated (YES) or a 
+# normal table of contents (NO) in the .chm file.
+
+BINARY_TOC             = NO
+
+# The TOC_EXPAND flag can be set YES to add extra items for group members 
+# to the contents of the Html help documentation and to the tree view. 
+
+TOC_EXPAND             = NO
+
 # The DISABLE_INDEX tag can be used to turn on/off the condensed index at 
 # top of each HTML page. The value NO (the default) enables the index and 
 # the value YES disables it. 
@@ -409,9 +467,9 @@ DISABLE_INDEX          = NO
 # This tag can be used to set the number of enum values (range [1..20]) 
 # that doxygen will group on one line in the generated HTML documentation. 
 
-#ENUM_VALUES_PER_LINE   = 4
+ENUM_VALUES_PER_LINE   = 4
 
-# If the GENERATE_TREEVIEW tag is set to YES, a side pannel will be
+# If the GENERATE_TREEVIEW tag is set to YES, a side panel will be
 # generated containing a tree-like index structure (just like the one that 
 # is generated for HTML Help). For this to work a browser that supports 
 # JavaScript and frames is required (for instance Netscape 4.0+ 
@@ -423,7 +481,7 @@ GENERATE_TREEVIEW      = NO
 # used to set the initial width (in pixels) of the frame in which the tree 
 # is shown. 
 
-#TREEVIEW_WIDTH         = 250
+TREEVIEW_WIDTH         = 250
 
 #---------------------------------------------------------------------------
 # configuration options related to the LaTeX output
@@ -603,7 +661,7 @@ EXPAND_AS_DEFINED      =
 
 # The TAGFILES tag can be used to specify one or more tagfiles. 
 
-TAGFILES               =
+TAGFILES               = 
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create 
 # a tag file that is based on the input files it reads. 
@@ -630,7 +688,7 @@ PERL_PATH              = /usr/bin/perl
 # toolkit from AT&T and Lucent Bell Labs. The other options in this section 
 # have no effect if this option is set to NO (the default) 
 
-HAVE_DOT               = NO
+HAVE_DOT               = YES
 
 # If the CLASS_GRAPH and HAVE_DOT tags are set to YES then doxygen 
 # will generate a graph for each documented class showing the direct and 
@@ -689,7 +747,13 @@ MAX_DOT_GRAPH_HEIGHT   = 1024
 # generate a legend page explaining the meaning of the various boxes and 
 # arrows in the dot generated graphs. 
 
-#GENERATE_LEGEND        = YES
+GENERATE_LEGEND        = YES
+
+# If the DOT_CLEANUP tag is set to YES (the default) Doxygen will 
+# remove the intermedate dot files that are used to generate 
+# the various graphs. 
+
+DOT_CLEANUP            = YES
 
 #---------------------------------------------------------------------------
 # Configuration::addtions related to the search engine   
